namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-subject-access-request-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-subject-access-request-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "dps-subject-access-requests"
    cloud-platform.justice.gov.uk/application: "Subject Access Request"
    cloud-platform.justice.gov.uk/owner: "Subject Access Request: subject-access-request-service@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-subject-access-request-ui"
    cloud-platform.justice.gov.uk/team-name: "hmpps-subject-access-requests"
    cloud-platform.justice.gov.uk/review-after: ""
